Add multiple building config

--- a/package.json
+++ b/package.json
@@ -24,11 +24,12 @@
     "url": "https://github.com/oleyva93/react-terminal-history/issues"
   },
   "homepage": "https://github.com/oleyva93/react-terminal-history#readme",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
+    "dev": "vite --config vite.config.site.js",
+    "build:site": "vite build --config vite.config.site.js",
+    "build:publish": "vite build --config vite.config.publish.js && npm publish --access public",
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
