Improve search matches and add new design

--- a/package.json
+++ b/package.json
@@ -24,11 +24,12 @@
     "url": "https://github.com/oleyva93/react-terminal-history/issues"
   },
   "homepage": "https://github.com/oleyva93/react-terminal-history#readme",
-  "version": "0.3.0",
+  "version": "1.0.1",
   "type": "module",
   "scripts": {
     "dev": "vite --config vite.config.site.js",
     "build:site": "vite build --config vite.config.site.js",
+    "build:package": "vite build --config vite.config.publish.js",
     "build:publish": "vite build --config vite.config.publish.js && npm publish --access public",
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
